--- a/Practica2.css
+++ b/Practica2.css
@@ -8,15 +8,16 @@ body {
 h1 {
   color: blue;
 }
-.containaer {
+.container {
   width: 90%;
   margin: 0 auto;
   display: flex;
   border: 2px solid red;
   height: 100px;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: flex-start;
+  align-content: space-around;
 }
 .container div{
   width: 200px;
