--- a/Practica2.css
+++ b/Practica2.css
@@ -1,7 +1,7 @@
-p {
+/* p {
   font-size: 40px;
   color: blueviolet;
-}
+} */
 body {
   background-image: url(https://images.alphacoders.com/103/thumb-1920-1035377.jpg);
 }
@@ -19,7 +19,7 @@ h1 {
   align-items: flex-start;
   align-content: space-around;
 }
-.container div{
+.container div {
   width: 200px;
 }
 .elemento1 {
@@ -33,4 +33,45 @@ h1 {
 }
 .elemento4 {
   background-color: green;
+}
+
+@charset "utf-8";
+.tarjeta {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 420px;
+  border: 1px solid lightgray;
+  box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+  border-radius: 15px;
+  font-family: sans-serif;
+}
+.titulo {
+  justify-content: center;
+  display: flex;
+  font-size: 24px;
+  padding: 10px 10px 0 10px;
+}
+.cuerpo {
+  padding: 10px;
+}
+.pie {
+  background: #6699ff;
+  border-radius: 0 0 15px 15px;
+  padding: 10px;
+  text-align: center;
+}
+.pie a {
+  text-decoration: none;
+  color: white;
+}
+.pie a:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  content: "";
 }
