--- a/Practica2.css
+++ b/Practica2.css
@@ -2,7 +2,7 @@
   font-size: 40px;
   color: blueviolet;
 } */
-body {
+/* body {
   background-image: url(https://images.alphacoders.com/103/thumb-1920-1035377.jpg);
 }
 h1 {
@@ -74,4 +74,4 @@ h1 {
   left: 0;
   z-index: 1;
   content: "";
-}
+} */
