--- a/Actividad2.css
+++ b/Actividad2.css
@@ -1,8 +1,89 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  padding: 0;
+  margin: 0;
+  line-height: 1.5;
+
+  background-color: black;
+}
+
+/* NAVBAR */
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5%;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li > a {
+  display: block;
+  position: relative;
+  padding: 20px 15px 10px 15px;
+  text-decoration: none;
+
+  color: white;
+}
+
+nav ul li .link::before {
+  content: "";
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+
+  background-color: white;
+}
+nav ul li .link:hover:before {
+  transform: scaleX(1);
+}
+
+nav .mobile {
+  display: none;
+}
+
+/* @media screen and (max-width: 460px){
+  nav .link{
+    display: none;
+  }
+} */
+
+nav .mobile .header{
+background-color: red;
+display: flex;
+text-align: center;
+justify-content: space-between;
+flex-direction: row;
+}
 
 
-
-
-
+@media screen and (max-width: 464px) {
+  nav{
+    width: 100%;
+    padding: 0;
+  }
+  nav ul {
+    display: none;
+  }
+  nav .mobile {
+    display: block;
+  }
+}
 
 
 
