--- a/Actividad2.css
+++ b/Actividad2.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -49,6 +50,7 @@ nav ul li .link::before {
 
   background-color: white;
 }
+
 nav ul li .link:hover:before {
   transform: scaleX(1);
 }
@@ -57,128 +59,28 @@ nav .mobile {
   display: none;
 }
 
-/* @media screen and (max-width: 460px){
-  nav .link{
-    display: none;
-  }
-} */
-
-nav .mobile .header{
-background-color: red;
-display: flex;
-text-align: center;
-justify-content: space-between;
-flex-direction: row;
+nav .mobile .header {
+  background-color: red;
+  display: flex;
+  text-align: end;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
-
-@media screen and (max-width: 464px) {
-  nav{
+@media screen and (max-width: 500px) {
+   
+  nav {
     width: 100%;
     padding: 0;
   }
+
   nav ul {
     display: none;
   }
+  
   nav .mobile {
     display: block;
   }
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* p {
-  font-size: 40px;
-  color: blueviolet;
-} */
-/* body {
-  background-image: url(https://images.alphacoders.com/103/thumb-1920-1035377.jpg);
-}
-h1 {
-  color: blue;
-}
-.container {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  border: 2px solid red;
-  height: 100px;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  align-content: space-around;
-}
-.container div {
-  width: 200px;
-}
-.elemento1 {
-  background-color: blueviolet;
-}
-.elemento2 {
-  background-color: red;
-}
-.elemento3 {
-  background-color: yellow;
-}
-.elemento4 {
-  background-color: green;
-}
-
-
-.tarjeta {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 420px;
-  border: 1px solid lightgray;
-  box-shadow: 2px 2px 8px 4px #d3d3d3d1;
-  border-radius: 15px;
-  font-family: sans-serif;
-}
-.titulo {
-  justify-content: center;
-  display: flex;
-  font-size: 24px;
-  padding: 10px 10px 0 10px;
-}
-.cuerpo {
-  padding: 10px;
-}
-.pie {
-  background: #6699ff;
-  border-radius: 0 0 15px 15px;
-  padding: 10px;
-  text-align: center;
-}
-.pie a {
-  text-decoration: none;
-  color: white;
-}
-.pie a:after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  content: "";
-} */
