--- a/Actividad2.css
+++ b/Actividad2.css
@@ -57,18 +57,51 @@ nav ul li .link:hover:before {
 
 nav .mobile {
   display: none;
+  width: 100%;
 }
 
 nav .mobile .header {
-  background-color: red;
   display: flex;
   text-align: end;
   justify-content: space-between;
   flex-direction: row;
+  background-color: black;
 }
 
+nav .mobile .header a{
+  color: white;
+  display: inline-flex;
+  text-decoration: none;
+  padding: 10px;
+}
+
+/* nav .mobile .links{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 200;
+}
+
+nav .mobile .links a {
+  font-size: 20px;
+display: block;
+padding: 10px 20px;
+text-decoration: none;
+
+color: white;
+}
+
+nav .mobile .links a:hover {
+  font-size: 20px;
+display: block;
+padding: 10px 20px;
+text-decoration: none;
+
+color: black;
+background-color: white;
+}  */
+
 @media screen and (max-width: 500px) {
-   
   nav {
     width: 100%;
     padding: 0;
@@ -82,5 +115,3 @@ nav .mobile .header {
     display: block;
   }
 }
-
-
