--- a/src/css/Actividad2.css
+++ b/src/css/Actividad2.css
@@ -37,6 +37,13 @@ nav ul li > a {
   color: white;
 }
 
+nav ul a{
+  color: white;
+  display: inline-flex;
+  text-decoration: none;
+  padding: 10px;
+}
+
 nav ul li .link::before {
   content: "";
   position: absolute;
@@ -101,7 +108,7 @@ color: black;
 background-color: white;
 }  */
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 400px) {
   nav {
     width: 100%;
     padding: 0;
