--- a/src/css/Actividad2.css
+++ b/src/css/Actividad2.css
@@ -37,7 +37,7 @@ nav ul li > a {
   color: white;
 }
 
-nav ul a{
+nav ul a {
   color: white;
   display: inline-flex;
   text-decoration: none;
@@ -75,7 +75,7 @@ nav .mobile .header {
   background-color: black;
 }
 
-nav .mobile .header a{
+nav .mobile .header a {
   color: white;
   display: inline-flex;
   text-decoration: none;
@@ -91,19 +91,19 @@ nav .mobile .header a{
   nav ul {
     display: none;
   }
-  
+
   nav .mobile {
     display: block;
   }
 }
 
-.container-card{
+.container-card {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.card{
+.card {
   width: 100%;
   margin: 20px;
   border-radius: 6px;
@@ -114,40 +114,70 @@ nav .mobile .header a{
   transition: all 400ms ease;
 }
 
-.card:hover{
-box-shadow: 5px 5px 20px rgba(248, 247, 247, 0.993);
-transform: translateY(-3%);
+.card:hover {
+  box-shadow: 5px 5px 20px rgba(248, 247, 247, 0.993);
+  transform: translateY(-3%);
 }
 
-.card img{
-width: 100%;
-height: 300px;
+.card img {
+  width: 100%;
+  height: 250px;
 }
 
-.card .contenido{
+.card .contenido {
   padding: 15px;
   text-align: center;
 }
 
-.card .contenido p{
-line-height: 1.5;
-color: #494545fd;
+.card .contenido p {
+  line-height: 1.5;
+  color: #494545fd;
 }
 
-.card .contenido h3{
+.card .contenido h3 {
   color: white;
-font-weight: 400;
-margin-bottom: 15px;
+  font-weight: 400;
+  margin-bottom: 15px;
 }
 
-.card .contenido a{
-text-align: none;
-display: inline-block;
-padding: 10px;
-margin-top: 10px;
-color: #c27171fd;
-border: 1px solid  #c27171fd;
-border-radius: 4px;
-transition: all 400ms ease;
+.card .contenido a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  color: #c27171fd;
+  border: 1px solid #c27171fd;
+  border-radius: 4px;
+  transition: all 400ms ease;
+}
 
+.card .contenido a:hover {
+  background: #c27171fd;
+  color: white;
+}
+
+main .mobile-container {
+  display: none;
+  width: 100%;
+}
+
+.mobile-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (max-width: 915px) {
+  main {
+    width: 100%;
+    padding: 0;
+  }
+
+  main section {
+    display: none;
+  }
+
+  main .mobile-container {
+    display: block;
+  }
 }
