--- a/src/css/Actividad2.css
+++ b/src/css/Actividad2.css
@@ -181,3 +181,12 @@ main .mobile-container {
     display: block;
   }
 }
+
+footer{
+  text-align: center;
+}
+footer img{
+ width: 200px;
+}
+footer b{
+color: white;}
