--- a/src/css/Actividad2.css
+++ b/src/css/Actividad2.css
@@ -12,7 +12,7 @@ body {
   background-color: black;
 }
 
-/* NAVBAR */
+/* NAVBAR ESCRITORIO */
 
 nav {
   display: flex;
@@ -37,13 +37,6 @@ nav ul li > a {
   color: white;
 }
 
-nav ul a {
-  color: white;
-  display: inline-flex;
-  text-decoration: none;
-  padding: 10px;
-}
-
 nav ul li .link::before {
   content: "";
   position: absolute;
@@ -61,6 +54,8 @@ nav ul li .link::before {
 nav ul li .link:hover:before {
   transform: scaleX(1);
 }
+
+/* NAVBAR MOBILE */
 
 nav .mobile {
   display: none;
@@ -82,7 +77,7 @@ nav .mobile .header a {
   padding: 10px;
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 915px) {
   nav {
     width: 100%;
     padding: 0;
@@ -96,6 +91,8 @@ nav .mobile .header a {
     display: block;
   }
 }
+
+/* CARD */
 
 .container-card {
   width: 100%;
@@ -182,11 +179,14 @@ main .mobile-container {
   }
 }
 
-footer{
+/* FOOTER */
+
+footer {
   text-align: center;
 }
-footer img{
- width: 200px;
+footer img {
+  width: 200px;
 }
-footer b{
-color: white;}
+footer b {
+  color: white;
+}
