--- a/src/css/Actividad2.css
+++ b/src/css/Actividad2.css
@@ -92,6 +92,63 @@ nav .mobile .header a {
   }
 }
 
+/* lol */
+nav .menu {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  min-width: 200px;
+  margin-top: 48px;
+
+  background-color: white;
+}
+
+nav .menu a {
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+}
+nav .menu a:hover {
+  background-color: black;
+  color: white;
+}
+
+nav .mobile .header #bmenu {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+
+  color: white;
+}
+
+nav .mobile .links {
+  display: none;
+  flex-direction: column;
+  position: relative;
+  z-index: 200;
+
+  background-color: black;
+}
+nav .mobile .links a {
+  font-size: 20px;
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+
+  color: white;
+}
+
+nav .mobile .links a:hover {
+  font-size: 20px;
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+
+  color: black;
+  background-color: white;
+}
+
+
 /* CARD */
 
 .container-card {
