--- a/src/css/Actividad2.css
+++ b/src/css/Actividad2.css
@@ -57,6 +57,38 @@ nav ul li .link:hover:before {
 
 /* NAVBAR MOBILE */
 
+/* lol */
+/* nav .mobile {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+nav .mobile .header div > a {
+  display: block;
+  position: relative;
+  text-decoration: none;
+  padding: 20px 15px 10px 15px;
+
+  color: white;
+}
+nav .mobile .header div .link::before {
+  content: "";
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+
+  background-color: white;
+}
+nav .mobile .header div .link:hover:before {
+  transform: scaleX(1);
+} */
+/* lol */
 nav .mobile {
   display: none;
   width: 100%;
@@ -93,7 +125,7 @@ nav .mobile .header a {
 }
 
 /* lol */
-nav .menu {
+/* nav .menu {
   position: absolute;
   display: none;
   flex-direction: column;
@@ -146,7 +178,7 @@ nav .mobile .links a:hover {
 
   color: black;
   background-color: white;
-}
+} */
 
 
 /* CARD */
